conceitoB/tests/shouldFail/test3.amen
preach int as somaUm(int as x1) {
    x1 giveth x1 + 1;
    amen x1;
};

x0 giveth 0;
proclaim(x0);
prayAsLongAs(x0 < 5) {
    x0 giveth somaUm(x0);
    proclaim(x0);
};
proclaim(x0);